# voice-diary

./: .gitignore  README.md  pyproject.toml
src/diary/: cli.py  enhancer.py  transcriber.py
